# nru-wifi-coexistence-simulator

./: CMakeLists.txt  LICENSE  README.md  channel.cpp  channel.hpp  config.cpp  config.hpp  dcf_base.hpp  enb_node.cpp  enb_node.hpp  frame.hpp  node.cpp  node.hpp  on_off_switcher.cpp  on_off_switcher.hpp  simulator.cpp  simulator.hpp  ue_node.cpp  ue_node.hpp  vcd_dumper.cpp  vcd_dumper.hpp  wifi_ap_node.cpp  wifi_ap_node.hpp  wifi_sta_node.cpp  wifi_sta_node.hpp
scenarios/: CMakeLists.txt  baseline.cpp  bianchi.cpp  scenario1.cpp  scenario2.cpp  scenario3.cpp  scenario4.cpp
scenarios/scripts/: baseline_var_carriers.sh  bianchi.sh  plot_baseline_var_carriers.py  plot_bianchi.py  plot_scenario1.py  plot_scenario2.py  plot_scenario3.py  plot_var_txlock.py  plot_var_wifiload.py  scenario1.sh  scenario2.sh  scenario3.sh  scenario4.sh  table_header.sh  test_prob.py  var_txlock.sh  var_wifi_cw.sh  var_wifi_load.sh
